<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
    android:id="@+id/menu_escritor"
    android:title="Escritor"
    android:icon="@drawable/ic_inclined_ballpoint"
    app:showAsAction="always"
        android:contentDescription="Menu principal del escritor"/>

    <!--<item
        android:id="@+id/menu_lector"
        android:title="Inicio"
        app:showAsAction="never"/>-->
</menu>