<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray03"
    tools:context=".menulibros.DeleteBook">

    <!--Buscador-->
    <EditText
        android:id="@+id/searchET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:hint="Buscar libro"
        android:padding="10dp"
        android:textColorHint="@color/black"/>

    <!--lista libros-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoriesRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/searchET"
        android:layout_margin="5dp"
        android:layout_marginEnd="5dp"
        tools:listitem="@layout/row_deletebook"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         />


</RelativeLayout>